# flexlib

./: README.md  pyproject.toml
doc/: flexdict.md  flexpath.md
flexlib/: __init__.py  flexdict.py  flexpath.py
tests/: test_flexdict.py  test_flexpath.py
