[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flexlib"
dynamic = ["version"]
description = "A collection of flexible utility classes for Python development on POSIX systems"
readme = "README.md"
authors = [
    { name = "Lance Lee", email = "belanced@gmail.com" }
]
maintainers = [
    { name = "Lance Lee", email = "belanced@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["utilities", "tools", "path", "filesystem", "posix", "unix", "linux", "macos", "pathlib", "flex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/yourusername/flexlib"
Repository = "https://github.com/yourusername/flexlib"
Issues = "https://github.com/yourusername/flexlib/issues"

[tool.setuptools.packages.find]
include = ["flexlib*"]
exclude = ["tests*"]

[tool.setuptools.dynamic]
version = {file = "version"}

# Optional: Add development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "flake8"
]

# Tool configurations
[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
